--- a/samples/php/dice/dice.html
+++ b/samples/php/dice/dice.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
       function rollTheDice(){
         $.ajax({
-          type:"get",
+          type:"post",
           url:"roll.php",
           cache:false,
           success: function (html)
