--- a/samples/php/dice/dice.html
+++ b/samples/php/dice/dice.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Smiirl Dice</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -22,6 +23,8 @@
     </script>
     <form action="roll.php" method="POST">
         <input type="submit" value="Roll the dice" onclick="return rollTheDice();"/>
+        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="return rollTheDice();">Block level button</button>
+
     </form>
 </body>
 </html>
