--- a/samples/php/dice/dice.html
+++ b/samples/php/dice/dice.html
@@ -21,10 +21,8 @@
         return false;
       }
     </script>
-    <form action="roll.php" method="POST">
-        <input type="submit" value="Roll the dice" onclick="return rollTheDice();"/>
-        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="return rollTheDice();">Block level button</button>
-
-    </form>
+    <div class="container">
+        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="return rollTheDice();">Roll the dice</button>
+    </div>
 </body>
 </html>
