--- a/samples/php/dice/dice.html
+++ b/samples/php/dice/dice.html
@@ -22,7 +22,9 @@
       }
     </script>
     <div class="container">
-        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="return rollTheDice();">Roll the dice</button>
+        <form>
+            <button type="button" class="btn btn-primary btn-lg btn-block" onclick="return rollTheDice();">Roll the dice</button>
+        </form>
     </div>
 </body>
 </html>
