--- a/samples/php/dice/dice.html
+++ b/samples/php/dice/dice.html
@@ -3,28 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Smiirl Dice</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript">
-      function rollTheDice(){
-        $.ajax({
-          type:"post",
-          url:"roll.php",
-          cache:false,
-          success: function (html)
-          {
-            console.log(html);
-          }
-        });
-        return false;
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript">
+  function rollTheDice() {
+    $.ajax({
+      type: "post",
+      url: "roll.php",
+      cache: false,
+      success: function (html) {
+        console.log(html);
       }
-    </script>
-    <div class="container">
+    });
+    return false;
+  }
+</script>
+<div class="container">
+    <div class="container-fluid">
         <form>
-            <button type="button" class="btn btn-primary btn-lg btn-block" onclick="return rollTheDice();">Roll the dice</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" onclick="return rollTheDice();">Roll the dice
+            </button>
         </form>
     </div>
+</div>
 </body>
 </html>
